--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/svg" sizes="32x32" href="./images/next.svg">
+  <link rel="icon" type="image/svg" sizes="32x32" href="./favicon.ico">
   
   <title>Rock, Paper, Scissors Game</title>
 
